[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/MonteHall/MonteHall.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Stage/Stage.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/InterpolatingCamera/InterpolatingCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/HUD/HUD.tscn" type="PackedScene" id=4]

[node name="MonteHall" type="Spatial"]
script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="InterpolatingCamera" parent="." instance=ExtResource( 3 )]

[node name="Stage" parent="." instance=ExtResource( 2 )]

[connection signal="open_all_doors" from="HUD" to="." method="_on_HUD_open_all_doors"]
[connection signal="start_trial" from="HUD" to="." method="_on_HUD_start_trial"]
